src/test/deca/context/invalid/homemade/tests/test24_nom_deja_pris/test24_nom_deja_pris5.deca
// test invalide de la règle 2.4


class A{
    int x = 3;
}

class A{
    
}